Bug 55929 - UI Tango Theme: 'Max Size' icon inconsistency
Summary: UI Tango Theme: 'Max Size' icon inconsistency
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
3.6.3.1 rc
Hardware: Other All
: medium trivial
Assignee: Stefan Knorr
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks: Icon-Theme-Tango
  Show dependency treegraph
 
Reported: 2012-10-12 15:15 UTC by Rainer Bielefeld Retired
Modified: 2017-07-31 23:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-10-12 15:15:23 UTC
I found this with  "LibreOffice 3.6.3.1” English UI/ German Locale [Build-ID: f8fce0b] on German WIN7 Home Premium (64bit) during my investigations for "Bug 55903 - UI: Zoom In (+) icon does nothing":

Although icon in screenshot right from "1:1" in Formula editor does more or less the same as the greyed out 'Resize ... all of the objects' icon they look different. Same with Crystal. Might be intended or can we improve consistency here?

In Galaxy the Icon is completely wront in Formula Editor, shows the simple zoom magnifying glass (Same with High Contrast and Oxygen).

For details please see Attachment 68490 [details]

I think that started in a more early version, but I did not check.

@Astron:
What do you think?

@Ivan:
Can you please replace the wrong High Contrast and Oxygen icons after comment from Astron?
Comment 1 Stefan Knorr 2012-10-12 17:38:32 UTC
Hi Rainer,
thanks for noticing this mess. This is some unfortunate case where LibreOffice picks an Industrial icon, despite a Tango icon being available albeit under another name.
It should indeed be rather easy to fix.

What will likely remain broken for now are the small icons that are currently all Industrial (afaik).
Comment 2 Commit Notification 2013-05-30 15:48:14 UTC
Rodolfo Ribeiro Gomes committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ffc2e5be1f712b09710e2096ad2f7eb81b80118d

Clean zoom redundances in Math and fix fdo#55929



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Marcos Souza 2013-06-26 17:10:18 UTC
Tested with current master. It's working as expected.

Rodolfo, do you want to close this?
Comment 4 Marcos Souza 2013-08-29 22:20:40 UTC
So,

Rodolf sent a patch for this...

Maybe this issue can be closed??
Comment 5 Marcos Souza 2013-09-03 13:49:03 UTC
This issue was fixed in June, so closing this as solved.