Clean zoom redundances in Math and fix fdo#55929

Zoom can be handled by sfx2 in many ways:
- 50%, 75%, 100%, 150%, 200%
- Optimal view (fit in window)
- Entire page
- Page width

The math module was doing the first two by itself. Remove it.

Strange enough, state methods for  zoom interface definitions on
sfx2's appslots.sdi were needed. I thought 'Container' property
in sfx.sdi should do the job. It seems to do nothing, though.
(The zoom should be disabled only if the object is an OLE/Container).

The Help-Ids from pop-up menu in Math/Formula were kept, because
they doesn't exist in sfx2.

Change-Id: Ie1ae413780551b34aa36b338f9a9df79a198319c